--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Template</title>
+    <title>Quote Generator</title>
   </head>
   <body>
     <i class="fa-brands fa-500px"></i>
