--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
     <title>Quote Generator</title>
   </head>
   <body>
-    <i class="fa-brands fa-500px"></i>
+    <div class="quote-container" id="quote-container">
+      <!-- Quote -->
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote"
+          >Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span
+        >
+        <!-- Author -->
+        <div class="quote-author">
+          <span id="author">Lorem</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container">
+          <button class="twitter-button" id="twitter" title="Tweet This!">
+            <i class="fab fa-twitter"></i>
+          </button>
+          <button id="new-quote">New Quote</button>
+        </div>
+      </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
