--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
       <!-- Quote -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote"
-          >Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span
-        >
+        <span id="quote"></span>
         <!-- Author -->
         <div class="quote-author">
-          <span id="author">Lorem</span>
+          <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
@@ -37,6 +35,10 @@
         </div>
       </div>
     </div>
+
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
